font stack chosen

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>CSS Practice</title>
+	<link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 	<h1>My page is working fine!</h1>
+
+	<p>Sink me Brethren of the Coast booty list handsomely Davy Jones' Locker swab gunwalls hulk Letter of Marque. Lanyard Davy Jones' Locker Plate Fleet American Main clap of thunder bilge water prow loaded to the gunwalls dance the hempen jig log. Long boat furl skysail line bilge rat gally to go on account squiffy grapple shrouds.</p>
 </body>
 </html>
